more work on dissertation

--- a/doc/dissertation/acknowledgements.tex
+++ b/doc/dissertation/acknowledgements.tex
@@ -25,9 +25,10 @@ of FCT methods over the years, whose works were essential in the development
 of the methodology used in this research. I would like to thank Dr. Dmitri Kuzmin
 for his responses in my questions about FCT.
 
-I would like to thank those that provided funding for this reasearch:
-the U.S. Department of Energy, through the Nuclear Energy University
-Programs (NEUP) fellowship, and Idaho National Laboratory, which funded
+I would like to thank the the U.S. Department of Energy for providing
+funding for this reasearch through the Nuclear Energy University
+Programs (NEUP) fellowship. I would also like to thank Dr. Richard
+Martineau of Idaho National Laboratory for providing funding of
 the last two semesters of research.
 
 Lastly, I would like to thank my friends and family for their love and support.
