--- a/doc/dissertation/content/conclusions/conclusions.tex
+++ b/doc/dissertation/content/conclusions/conclusions.tex
@@ -52,5 +52,5 @@ again in conjunction with the entropy viscosity method. In this case,
 no discrete maximum principle applies as in the scalar case. Therefore,
 the approach taken was to transform the system into characteristic variables
 to allow scalar FCT methodology to be applied. This was found to have some
-success; however, some spurious oscillations were still observed, although
-reduced.
+success; however, this approach was limited to 1-D because characteristic
+transformations could not be applied simulatenously in multiple directions.
