--- a/doc/diagrams/cell_indices/cell_indices.tex
+++ b/doc/diagrams/cell_indices/cell_indices.tex
@@ -10,7 +10,7 @@
 \draw[draw=none, fill=yellow, fill opacity=0.5] (p16)--(i)--(j)--(p18)
   --(p4)--cycle;
 
-\node at ($0.333*(i) + 0.333*(j) + 0.333*(p17)$) {\Large $K$};
+\node[black] at ($0.333*(i) + 0.333*(j) + 0.333*(p17)$) {\Large $K$};
 
 \fill[black] (i) circle (\pointsize);
 \fill[black] (j) circle (\pointsize);
