--- a/doc/diagrams/shared_support/shared_support.tex
+++ b/doc/diagrams/shared_support/shared_support.tex
@@ -10,11 +10,11 @@
 
 \draw[thick] (i)--(p17)--(j)--(p21)--cycle;
 
-\fill (i) circle (\pointsize);
-\fill (j) circle (\pointsize);
+\fill[black] (i) circle (\pointsize);
+\fill[black] (j) circle (\pointsize);
 
-\node at ($(i)-(0.25,0)$) {$i$};
-\node at ($(j)+(0.2,0.25)$) {$j$};
+\node[black] at ($(i)-(0.25,0)$) {$i$};
+\node[black] at ($(j)+(0.2,0.25)$) {$j$};
 
 \node at (2.5,3) {\Large $\textcolor{gray!20!red}{\support_i}$};
 \node at (3.5,2.8) {\Large $\textcolor{violet}{\support\ij}$};
