--- a/doc/dissertation/content/low_order/explicit_DMP.tex
+++ b/doc/dissertation/content/low_order/explicit_DMP.tex
@@ -26,7 +26,7 @@ satisfies the following local discrete maximum principle:
 \end{equation}
 \end{subequations}
 where $\solutionletter_{\substack{\max\\\min},i}^\timeindex =
-\substack{\max\\\min\limits_{j\in\indicescell[\support_i]}}\solutionletter_j^\timeindex$.
+\substack{\max\\\min\limits_{j\in\indices(\support_i)}}\solutionletter_j^\timeindex$.
 \end{theorem}
 
 \begin{proof}
