--- a/doc/dissertation/content/low_order/steadystate_DMP.tex
+++ b/doc/dissertation/content/low_order/steadystate_DMP.tex
@@ -20,10 +20,10 @@ local discrete maximum principle:
 \end{subequations}
 where
 \[
-  \solutionletter_{\min,j\ne i}^L \equiv \min\limits_{j\ne i\in\indicescell[\support_i]}
+  \solutionletter_{\min,j\ne i}^L \equiv \min\limits_{j\ne i\in\indices(\support_i)}
     \solutionletter_j^L
   \eqc\quad
-  \solutionletter_{\max,j\ne i}^L \equiv \max\limits_{j\ne i\in\indicescell[\support_i]}
+  \solutionletter_{\max,j\ne i}^L \equiv \max\limits_{j\ne i\in\indices(\support_i)}
     \solutionletter_j^L
   \eqp
 \]
