--- a/doc/dissertation/content/low_order/theta_DMP.tex
+++ b/doc/dissertation/content/low_order/theta_DMP.tex
@@ -37,7 +37,7 @@ satisfies the following local discrete maximum principle:
 where
 \[
   \solutionletter_{\substack{\max\\\min},j\ne i}^\timeindex
-  \equiv \substack{\max\\\min\limits_{j\ne i\in\indicescell[\support_i]}}
+  \equiv \substack{\max\\\min\limits_{j\ne i\in\indices(\support_i)}}
     \solutionletter_j^\timeindex
   \eqp
 \]
