some edits to defense

--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -47,7 +47,7 @@
 \newcommand{\nnodes}{N_\text{node}}
 \newcommand{\dofindex}{j}
 \newcommand{\nodeindex}{k}
-\newcommand{\componentindex}{p}
+\newcommand{\componentindex}{k}
 \newcommand{\transpose}{^{\text{T}}}
 
 % schemes
