--- a/doc/presentations/defense/content/scalar_discretization.tex
+++ b/doc/presentations/defense/content/scalar_discretization.tex
@@ -149,7 +149,7 @@
     for node $i$ are considered:
     \begin{enumerate}
       \item \hlorange{Strongly impose}: \emph{replace} equation $i$ with the equation
-        $U_i = u^{\textup{inc}}(\x_i)$ (or some multiple of it).
+        $U_i = u^{\textup{inc}}(\x_i)$.
       \item \hlorange{Weakly impose}: evaluate incoming boundary fluxes 
         in equation $i$ with values $u^{\textup{inc}}(\x_j)$ instead of values $U_j$.
       \item Weakly impose with \hlorange{boundary penalty}: \emph{add} to
