--- a/doc/presentations/defense/content/scalar_low.tex
+++ b/doc/presentations/defense/content/scalar_low.tex
@@ -60,7 +60,7 @@
       \mathbf{D}_K = \left[\begin{array}{r r}
            1 & -1\\
           -1 &  1
-        \end{array}\right]\Delta x \eqp
+        \end{array}\right]\Delta x_K \eqp
     \end{equation}
 \end{itemize}
 
