--- a/doc/presentations/defense/content/sw_high.tex
+++ b/doc/presentations/defense/content/sw_high.tex
@@ -25,7 +25,8 @@
     \begin{equation}
       \diffusionmatrixletter^{\entropy,n}\ij \equiv
         \frac{\entropyresidualcoef\entropyresidual\ij^n
-          + \entropyjumpcoef\entropyjump\ij^n}{\entropynormalization\ij^n} \eqp
+          + \entropyjumpcoef\entropyjump\ij^n}
+         {\|\eta(\vectorsolution_h^n)-\bar{\eta}(\vectorsolution_h^n)\|_{L^\infty(\mathcal{D})}} \eqp
     \end{equation}
 \end{itemize}
 
