--- a/doc/presentations/defense/content/scalar_results.tex
+++ b/doc/presentations/defense/content/scalar_results.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 \frametitle{Source-in-Absorber Test Problem}
-\framesubtitle{Strong Absorber with Source in Left Half of Domain}
+\framesubtitle{Strong Absorber with Source in Left Half of Domain, FE}
 
 \begin{center}
 \includegraphics[height=0.8\textheight]{./figures/solutions_source_FE.pdf}
@@ -13,7 +13,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 \frametitle{2-D Void-to-Absorber Test Problem}
-\framesubtitle{Normally-Incident Wave from Void to Absorber Quadrant}
+\framesubtitle{Normally-Incident Wave from Void to Absorber Quadrant, FE}
 
 \begin{figure}[h]
    \centering
@@ -45,83 +45,6 @@
    \begin{subfigure}{0.3\textwidth}
       \centering
       \includegraphics[width=0.8\textwidth]{./figures/EVFCT.png}
-      \caption{EV-FCT}
-   \end{subfigure}
-\end{figure}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{2-D Void-to-Absorber Test Problem}
-\framesubtitle{Number of Cells vs. Iterations Study, Steady-State}
-
-\begin{center}
-\begin{table}[h]
-\caption{EV and FCT Iterations Required for EV-FCT Solution}
-\begin{tabular}{c c c}\toprule
-$N_{cell}$ & \emph{EV} & \emph{FCT}\\\midrule
- 64 & 97 & 716\\
-256 & -- & \textcolor{red}{\textbf{FAIL}}\\
-\bottomrule\end{tabular}
-\end{table}
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{3-D Void-to-Absorber Test Problem}
-\framesubtitle{Normally-Incident Wave from Void to Absorber Octant}
-
-\begin{figure}[h]
-   \centering
-   \begin{subfigure}{0.45\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{./figures/Gal_3D.png}
-      \caption{Galerkin}
-   \end{subfigure}
-   \begin{subfigure}{0.45\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{./figures/GalFCT_3D.png}
-      \caption{Galerkin-FCT}
-   \end{subfigure}
-\end{figure}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Skew-Incident Void-to-Absorber Test Problem}
-\framesubtitle{Skew-Incident Wave from Void to Absorber Quadrant}
-
-\begin{figure}[h]
-   \centering
-   \begin{subfigure}{0.3\textwidth}
-      \centering
-      \includegraphics[width=0.8\textwidth]{./figures/skew_exact.png}
-      \caption{Exact}
-   \end{subfigure}
-   \begin{subfigure}{0.3\textwidth}
-      \centering
-      \includegraphics[width=0.8\textwidth]{./figures/skew_Gal.png}
-      \caption{Galerkin}
-   \end{subfigure}
-   \begin{subfigure}{0.3\textwidth}
-      \centering
-      \includegraphics[width=0.8\textwidth]{./figures/skew_GalFCT.png}
-      \caption{Galerkin-FCT}
-   \end{subfigure}
-   \begin{subfigure}{0.3\textwidth}
-      \centering
-      \includegraphics[width=0.8\textwidth]{./figures/skew_low.png}
-      \caption{Low-order}
-   \end{subfigure}
-   \begin{subfigure}{0.3\textwidth}
-      \centering
-      \includegraphics[width=0.8\textwidth]{./figures/skew_EV.png}
-      \caption{EV}
-   \end{subfigure}
-   \begin{subfigure}{0.3\textwidth}
-      \centering
-      \includegraphics[width=0.8\textwidth]{./figures/skew_EVFCT.png}
       \caption{EV-FCT}
    \end{subfigure}
 \end{figure}
@@ -227,35 +150,6 @@ $N_{cell}$ & \emph{EV} & \emph{FCT}\\\midrule
       \caption{EV-FCT, SSPRK33}
    \end{subfigure}
 \end{figure}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Glance-in-Void Test Problem}
-\framesubtitle{Number of Cells vs. Iterations Study, Steady-State}
-
-\begin{center}
-\begin{table}[h]
-\caption{EV and FCT Iterations Required for EV-FCT Solution}
-\begin{tabular}{c c c}\toprule
-$N_{cell}$ & \emph{EV} & \emph{FCT}\\\midrule
-  64 &   32 & 9284\\
- 256 &   59 &  440\\
-1024 & 1072 & 3148\\
-4096 &   -- & \textcolor{red}{\textbf{FAIL}}\\
-\bottomrule\end{tabular}
-\end{table}
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Source-in-Void Test Problem: Galerkin-FCT Vs. EV-FCT}
-\framesubtitle{Left Half: Source in Vacuum, Right Half: No Source in Absorber}
-
-\begin{center}
-\includegraphics[height=0.8\textheight]{./figures/sourcevoid_FCT_comparison.pdf}
-\end{center}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
