--- a/doc/presentations/defense/content/systems_fct.tex
+++ b/doc/presentations/defense/content/systems_fct.tex
@@ -47,9 +47,7 @@
   \item Bounds to impose on FCT solution are unclear for systems case:
     \begin{itemize}
       \item For scalar case, a DMP was used, but no DMP exists for systems.
-      \item The invariant domain property is not useful here
-        because while the property is known to hold, the domain itself is not
-        actually known.
+      \item The invariant domain property is not so straightforward to enforce.
     \end{itemize}
   \item One may want to impose physical bounds on some non-conservative
     set of variables.
@@ -140,53 +138,15 @@
         + \sum_j\diffusionmatrixletter\ij^{L,n}\hat{\solutionvector}_j^n
         - \hat{\ssrhs}_i^n \eqp
     \end{equation}
-  \item As in the scalar case, negative and positive antidiffusive flux
-    sums are required in the limiting coefficient definitions:
-    \begin{equation}
-      \hat{\correctionfluxletter}_i^{\componentindex,-} \equiv
-        \sum\limits_{j:\hat{\correctionfluxentry}\ij^\componentindex<0}
-        \hat{\correctionfluxentry}\ij^\componentindex \eqc \qquad
-      \hat{\correctionfluxletter}_i^{\componentindex,+} \equiv
-        \sum\limits_{j:\hat{\correctionfluxentry}\ij^\componentindex>0}
-        \hat{\correctionfluxentry}\ij^\componentindex \eqp
-    \end{equation}
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Limiting Coefficients (Cont.)}
-
-\begin{itemize}
-  \item The limiting coefficients are first computed just as in the scalar case:
-    \begin{equation}
-      \limiterletter_i^{\componentindex,\pm} \equiv\left\{
-        \begin{array}{l l}
-          1 & \hat{\correctionfluxletter}_i^{\componentindex,\pm} = 0\\
-          \min\left(1,\frac{Q_i^{\componentindex,\pm}}
-            {\hat{\correctionfluxletter}_i^{\componentindex,\pm}}\right) &
-          \hat{\correctionfluxletter}_i^{\componentindex,\pm} \ne 0
-        \end{array}
-      \right. \eqp
-    \end{equation}
-    \begin{equation}
-      \limiterletter\ij^\componentindex \equiv\left\{
-        \begin{array}{l l}
-          \min(L_i^{\componentindex,+},L_j^{\componentindex,-}) &
-            \hat{\correctionfluxentry}\ij^\componentindex \geq 0\\
-          \min(L_i^{\componentindex,-},L_j^{\componentindex,+}) &
-            \hat{\correctionfluxentry}\ij^\componentindex < 0
-        \end{array}
-      \right. \eqp
-    \end{equation}
-  \item However, there is a caveat: limiting coefficients may require
+  \item Limiting coefficients are computed just as for scalar case, for
+    each solution component $\componentindex$:
+    $\limiterletter\ij^{\componentindex}$.
+  \item Literature suggests limiting coefficients may require
     \hlorange{synchronization}, e.g.,
     \begin{equation}
       \limiterletter\ij^\componentindex \mapsfrom
-        \min\limits_k\limiterletter\ij^k \quad \forall\componentindex \eqp
+        \min\limits_\ell\limiterletter\ij^\ell \quad \forall\componentindex \eqp
     \end{equation}
-  \item Otherwise, antidiffusive fluxes in one component can violate the
-    conditions of another component.
 \end{itemize}
 
 \end{frame}
