more defense revisions

--- a/doc/presentations/defense/content/backup.tex
+++ b/doc/presentations/defense/content/backup.tex
@@ -278,6 +278,26 @@ $N_{cell}$ & \emph{EV} & \emph{FCT}\\\midrule
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
+\frametitle{Source-Void-to-Absorber Test Problem}
+\framesubtitle{Weakly Imposed Dirichlet BC, SS}
+
+\begin{center}
+\includegraphics[height=0.8\textheight]{./figures/sourcevoid_weak.pdf}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Source-Void-to-Absorber Test Problem}
+\framesubtitle{Weakly Imposed Dirichlet BC With Boundary Penalty, SS}
+
+\begin{center}
+\includegraphics[height=0.8\textheight]{./figures/sourcevoid_penalty.pdf}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
 \frametitle{1-D Dam Break Test Problem}
 \framesubtitle{Phase Diagram, FE, 32 cells}
 
