--- a/doc/presentations/defense/content/scalar_fct.tex
+++ b/doc/presentations/defense/content/scalar_fct.tex
@@ -142,7 +142,7 @@
 
     \begin{quote}
       Find $0\leq \{L\ij\} \leq 1$ such that
-      $\sum_i\bar{\correctionfluxletter}_i$ is maximized, subject
+      $\sum_i|\bar{\correctionfluxletter}_i|$ is maximized, subject
       to the constraints $Q_i^-\leq \bar{\correctionfluxletter}_i\leq Q_i^+$,
       $\forall i$.
     \end{quote}
